--- a/style.css
+++ b/style.css
@@ -6,15 +6,120 @@ body {
   background-color: rgb(42, 45, 88);
 }
 
+.container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  min-height: 100vh;
+  width: 400px;
+  height: 400px;
+  border-radius: 10px;
+  z-index: 2;
+}
+
+.league_pick {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 400px;
+  height: 450px;
+  border-radius: 50px;
+  background-color: rgb(19, 35, 43);
+}
+
+.intro {
+  font-size: 35px;
+  color: aqua;
+  margin-bottom: 20px;
+}
+
+.england,
+.spain,
+.italy,
+.france {
+  margin-top: 10px;
+  font-size: 25px;
+  width: 350px;
+  height: 70px;
+  background: #253a5f;
+  color: aliceblue;
+}
+
+.england:hover {
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+  background: linear-gradient(
+    to right,
+    white,
+    white 20%,
+    #ed2939 20%,
+    #ed2939 80%,
+    white 80%
+  );
+  cursor: pointer;
+}
+
+.spain:hover {
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+  background: linear-gradient(
+    to right,
+    rgb(255, 0, 0),
+    rgb(255, 0, 0) 20%,
+    #f8a203 20%,
+    #f8a203 80%,
+    rgb(255, 0, 0) 80%
+  );
+  cursor: pointer;
+}
+
+.italy:hover {
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+  background: linear-gradient(
+    to right,
+    green,
+    green 35%,
+    white 35%,
+    white 65%,
+    rgb(255, 0, 0) 65%
+  );
+  cursor: pointer;
+}
+
+.france:hover {
+  border-radius: 20px;
+  color: rgb(0, 0, 0);
+  background: linear-gradient(
+    to right,
+
+    #002395,
+    #002395 35%,
+    white 35%,
+    white 65%,
+    #ed2939 65%
+  );
+  cursor: pointer;
+}
+
 .wrapper {
+  visibility: hidden;
+  position: absolute;
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 60px;
   width: 770px;
   height: 800px;
   border-radius: 10px;
   background-color: rgb(72, 83, 51);
   transform: scaleX(1);
+  z-index: 1;
 }
 
 .rounds {
@@ -39,6 +144,10 @@ body {
   background-color: rgb(238, 49, 49);
   color: rgb(0, 0, 0);
   font-weight: bold;
+}
+
+.clear_results {
+  background-color: rgb(24, 168, 194);
 }
 
 .start_games:hover,
@@ -225,6 +334,64 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   color: white;
+}
+
+.winner {
+  visibility: hidden;
+  margin-top: 200px;
+  position: fixed;
+  z-index: 1;
+  height: 100vh;
+  width: 310px;
+  height: 270px;
+  background-color: rgb(26, 86, 126);
+  border-radius: 20px;
+  cursor: grab;
+}
+
+.winner:active {
+  cursor: grabbing;
+}
+
+.winner:hover {
+  background-color: rgb(21, 105, 153);
+}
+
+.modal {
+  width: 300px;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  font-size: 25px;
+  text-align: center;
+  padding-bottom: 30px;
+  color: rgb(239, 243, 240);
+}
+
+.modal_winnerTeam {
+  color: rgb(19, 179, 19);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.modal_looserTeam {
+  color: rgb(228, 53, 53);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.modal_close {
+  margin-top: 20px;
+  top: 85%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 10px;
+}
+
+.modal_close:hover {
+  background-color: aquamarine;
 }
 
 @media screen and (max-width: 500px) {
